--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,3 +1,5 @@
+name: Lint
+
 on:
   push:
     branches: [master]
@@ -7,10 +9,9 @@ env:
   NODE_VERSION: 16
 
 jobs:
-  test:
-    name: Test
+  lint:
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v3
 
