--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "build:cjs": "tsc --module commonjs --outDir dist/cjs",
     "dev": "tsc -w",
     "lint": "eslint \"src/{**/*,*}.{js,ts,jsx,tsx}\"",
-    "prepare": "npm run build",
-    "prepublishOnly": "npm run lint",
+    "prepublishOnly": "npm run lint && npm run build",
     "docs": "yarn run typedoc src/index.ts"
   },
   "keywords": [
