--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "use-homeassistant",
   "version": "0.0.2",
   "description": "Helpers for creating custom Homeassistant dashboards in React",
+  "homepage": "https://tmikoss.github.io/use-homeassistant",
+  "repository": "github:tmikoss/use-homeassistant",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/esm/index.d.ts",
